<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ly_List"
    android:orientation="vertical"
    android:background="@color/primary_light"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CatalogoActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_buscar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_VC"
        android:layout_marginBottom="@dimen/margin_VC"
        android:layout_marginHorizontal="@dimen/margin_VC"
        android:hint="@string/buscar_electro"
        app:startIconDrawable="@drawable/ic_baseline_search"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/rvCatalogo">

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="1"
        android:inputType="text"
        />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCatalogo"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginTop="@dimen/margin_VC"
        android:layout_marginHorizontal="@dimen/margin_VC"
        app:layout_constraintTop_toTopOf="@id/til_buscar"
        app:layout_constraintBottom_toTopOf="@id/ingreso_consumo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/ingreso_consumo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/ingrese_tiempo"
        android:layout_marginTop="@dimen/margin_VC"
        android:layout_marginHorizontal="@dimen/margin_VC"
        app:layout_constraintTop_toBottomOf="@id/rvCatalogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_minutosUso"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_vertical_min"
        android:layout_marginHorizontal="@dimen/margin_VC"
        android:hint="@string/hint_minutos"
        app:startIconDrawable="@drawable/ic_baseline_time"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ingreso_consumo">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:inputType="number"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_acces"
        android:layout_width="@dimen/btn_acceder_w"
        android:layout_height="@dimen/btn_acceder_h"
        android:text="@string/btn_calcular"
        android:layout_marginTop="@dimen/space_between_ed_and_button"
        style="@style/Buttons"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_minutosUso"
        />
</androidx.constraintlayout.widget.ConstraintLayout>